k8s-session/project-2/datastore-app.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /actuator/prometheus
    prometheus.io/scrape: "true"
  name: mysv-cip
spec:
  ports:
    - port: 8081
      targetPort: 8082
  selector:
    app: datastore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: datastore
  name: datastore-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: datastore
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: datastore
    spec:
      containers:
      - image: harish0604/datastore:v1
        name: datastore
#        livenessProbe:
#          httpGet:
#            path: /test
#            port: 80
#          initialDelaySeconds: 3
#          periodSeconds: 3
#          timeoutSeconds: 4
#          failureThreshold: 3 #
